<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimens_6dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimens_60dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/consInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/tvProductName"
            style="@style/CustomTextViewStyle"
            app:layout_constraintBottom_toTopOf="@+id/tvProductType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductType"
            style="@style/CustomTextViewStyle"
            app:layout_constraintBottom_toTopOf="@+id/tvProductPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/tvProductPrice"
            style="@style/CustomTextViewStyle"
            app:layout_constraintBottom_toTopOf="@+id/tvProductTax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvProductType" />

        <TextView
            android:id="@+id/tvProductTax"
            style="@style/CustomTextViewStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvProductPrice" />

        <TextView
            android:id="@+id/tvProductNameHead"
            style="@style/CustomTextViewHeadingStyle"
            android:text="@string/product_name_tv"
            app:layout_constraintBottom_toTopOf="@+id/tvProductTypeHead"
            app:layout_constraintEnd_toStartOf="@+id/startGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductTypeHead"
            style="@style/CustomTextViewHeadingStyle"
            android:text="@string/product_type_tv"
            app:layout_constraintBottom_toTopOf="@+id/tvProductPriceHead"
            app:layout_constraintEnd_toStartOf="@+id/startGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductNameHead" />

        <TextView
            android:id="@+id/tvProductPriceHead"
            style="@style/CustomTextViewHeadingStyle"
            android:text="@string/selling_price_tv"
            app:layout_constraintBottom_toTopOf="@+id/tvProductTaxHead"
            app:layout_constraintEnd_toStartOf="@+id/startGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductTypeHead" />

        <TextView
            android:id="@+id/tvProductTaxHead"
            style="@style/CustomTextViewHeadingStyle"
            android:text="@string/tax_rate_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/startGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductPriceHead" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>